--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8097
+server.contextPath=/codecollab
+spring.rabbitmq.host=10.8.180.132
+spring.rabbitmq.port=31111
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jsa.rabbitmq.queue=codecollabQueue
+jsa.rabbitmq.exchange=codecollabExchange
+jsa.rabbitmq.routingkey=codecollabroutingKey
